Fix #165 (safari button alignment) (#167)

--- a/src/scss/components/_dialog.scss
+++ b/src/scss/components/_dialog.scss
@@ -29,6 +29,7 @@
         justify-content: flex-end;
         .button {
             min-width: 80px;
+            display: table-cell;
             font-weight: $weight-semibold;
         }
     }
